# geoclust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  hello  populate.sh
docs/: endpoints.md
migrations/2018-01-15-234850_create_books/: down.sql
migrations/2018-11-07-175600_create_lists/: up.sql
migrations/2018-11-17-164320_create_visits/: down.sql  up.sql
migrations/2018-11-19-115531_gspots/: down.sql  up.sql
src/: main.rs  schema.rs  static_files.rs
src/models/: google_responses.rs  gspots.rs  lists.rs  mod.rs  visits.rs
src/routes/: books.rs  gspots.rs  lists.rs  mod.rs  visits.rs
