[package]
name = "api"
version = "0.1.0"
authors = ["tensor-programming <abeltensor@tensor-programming.com>"]

[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.32"

reqwest = "0.9.5"

rocket = "0.4.0-rc.1"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]

[patch.crates-io.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"

[patch.crates-io.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"
